# agent-working-tracking

./: .gitignore  README.md  generate-diagrams.sh  plan.md  pyproject.toml
.agents/: workflows
agent-tracking-311/: pyvenv.cfg
app/: Dockerfile  app.js  index.html  server.py  style.css  utils_server.py
diagrams/: diagram_20260227_150816.drawio  diagram_20260302_153419.drawio  diagram_20260302_171447.drawio  diagram_20260302_175010.drawio  diagram_20260304_091612.drawio  diagram_20260305_164043.drawio  diagram_20260305_170151.drawio
tests/: __init__.py  test_analysis.py  test_cli.py  test_visualization.py
visualizations/: conversation-history-35ae05d8-0cf5-4381-a046-f6fa876989aa.json  conversation-history-613d09ce-74a9-42e8-91d8-bd2596fbf02e.json  conversation-history-7e15c718-a47d-4fde-bf9c-a7cd7edb1819.json  conversation-history-913529ac-bbaa-4491-8e11-bc1dd80773f9.json  conversation-history-ef155b9b-1f70-4f1e-b998-e89933135899.json  metrics-id-13.json  metrics-id-36.json  metrics-id-4.json  project_interaction_map-id-0.html  project_interaction_map-id-1.html  project_interaction_map-id-10.html  project_interaction_map-id-11.html  project_interaction_map-id-12.html  project_interaction_map-id-13.html  project_interaction_map-id-14.html  project_interaction_map-id-19.html  project_interaction_map-id-2.html  project_interaction_map-id-20.html  project_interaction_map-id-3.html  project_interaction_map-id-36.html  project_interaction_map-id-4.html  project_interaction_map-id-42.html  project_interaction_map-id-5.html  project_interaction_map-id-6.html  project_interaction_map-id-7.html  project_interaction_map-id-8.html  project_interaction_map-id-9.html  project_interaction_map.html  quality-id-10.json  quality-id-11.json  quality-id-12.json  (+8 more)
(+12 files in other folders)
